--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,14 +12,29 @@
   <div class="page-wrapper">
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="page-header__logo">
+        <!-- <a class="page-header__logo">
+          <picture>
+            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+            <img class="main-nav__logo-image  logo__image" src="img/icon-logo-mobile.svg" width="33" height="38"
+              alt="Кэт Энерджи">
+          </picture>
           <img class="page-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Кэт Энерджи">
-        </a>
-        <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">Открыть меню
-          </button>
+        </a> -->
+        <nav class="main-nav  main-nav--closed  main-nav--nojs">
           <div class="main-nav__wrapper">
-            <ul class="main-nav__list  site-list">
+            <a class="main-nav__logo  logo-page-header" href="index.html">
+              <picture>
+                <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                <img class="main-nav__logo-image  logo-page-header__image" src="img/logo-mobile.svg" width="33"
+                  height="38" alt="Кэт Энерджи">
+              </picture>
+              <!-- <img class="main-nav__logo-title  logo__title" src="img/mobile-header.svg" width="101" height="18"> -->
+            </a>
+            <button class="main-nav__toggle" type="button">Открыть меню
+            </button>
+            <!-- <ul class="main-nav__list  site-list">
               <li class="site-list__item">
                 <a class="site-list__link" href="index.html">Главная</a>
               </li>
@@ -27,6 +43,18 @@
               </li>
               <li class="site-list__item">
                 <a class="site-list__link" href="form.html">Подбор программы</a>
+              </li>
+            </ul> -->
+            <ul class="main-nav__list  site-list">
+              <li class="site-list__item  main-nav__item">
+                <a class="site-list__link  main-nav__link" href="index.html">Главная</a>
+              </li>
+              <li class="site-list__item  main-nav__item">
+                <a class="site-list__link  main-nav__link  main-nav__link--active" href="catalog.html">Каталог
+                  продукции</a>
+              </li>
+              <li class="site-list__item  main-nav__item site-list__item--active ">
+                <a class="site-list__link  main-nav__link" href="form.html">Подбор программы</a>
               </li>
             </ul>
           </div>
@@ -37,10 +65,25 @@
 
       <section class="product-catalog">
         <div class="product-catalog__wrapper">
-          <h2 class="product-catalog__title">Каталог продукции</h2>
+          <h2 class="content-title  content-title--product-catalog">Каталог продукции</h2>
+          <!-- <h2 class="product-catalog__title">Каталог продукции</h2> -->
           <ul class="product-catalog__list">
             <li class="product-catalog__item">
-              <img class="product-catalog__image" src="http://placehold.it/140x144">
+              <div class="product-catalog__item-inner">
+                <picture>
+                  <source media="(min-width: 1300px)"
+                    srcset="img/chicken-big-desktop@1x.png, img/chicken-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/chicken-small-tablet@1x.png, img/chicken-small-tablet@2x.png 2x">
+                  <source media="(min-width: 1300px)"
+                    srcset="img/chicken-big-desktop@1x.png, img/chicken-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/chicken-small-tablet@1x.png, img/chicken-small-tablet@2x.png 2x">
+                  <img class="catalog__picture" src="img/chicken-small-mobile@1x.jpg"
+                    srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                </picture>
+              </div>
+              <!--<img class="product-catalog__image" src="http://placehold.it/140x144"> -->
               <div class="product-catalog__desc">
                 <a class="product-catalog__title" href="#">Cat Energy PRO 500 г</a>
                 <table class="product-catalog__table  product-table">
@@ -65,7 +108,19 @@
               </a>
             </li>
             <li class="product-catalog__item">
-              <img class="product-catalog__image" src="http://placehold.it/140x144">
+              <div class="product-catalog__item-inner">
+                <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/chicken-big-desktop@1x.png, img/chicken-big-desktop@2x.png 2x">
+                  <source media="(min-width: 1300px)"
+                    srcset="img/chicken-big-desktop@1x.png, img/chicken-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/chicken-big-tablet@1x.png, img/chicken-big-tablet@2x.png 2x">
+                  <img class="product-catalog__image" src="img/chicken-big-mobile@1x.jpg"
+                    srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 1000 г">
+                </picture>
+              </div>
+              <!-- <img class="product-catalog__image" src="http://placehold.it/140x144"> -->
               <div class="product-catalog__desc">
                 <a class="product-catalog__title" href="#">Cat Energy PRO 1000 г</a>
                 <table class="product-catalog__table  product-table">
@@ -90,7 +145,22 @@
               </a>
             </li>
             <li class="product-catalog__item">
-              <img class="product-catalog__image" src="http://placehold.it/140x144">
+              <div class="product-catalog__item-inner">
+                <picture>
+                  <source media="(min-width: 1300px)"
+                    srcset="img/fish-big-desktop@1x.png, img/fish-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/fish-big-tablet@1x.png, img/fish-small-tablet@2x.png 2x">
+                  <source srcset="img/fish-small-mobile@2x.jpg 2x">
+                  <source media="(min-width: 1300px)"
+                    srcset="img/fish-small-desktop@1x.png, img/fish-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/fish-small-tablet@1x.png, img/fish-small-tablet@2x.png 2x">
+                  <img class="product-catalog__image" src="img/fish-small-mobile@1x.jpg"
+                    srcset="img/fish-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                </picture>
+              </div>
+              <!-- <img class="product-catalog__image" src="http://placehold.it/140x144"> -->
               <div class="product-catalog__desc">
                 <a class="product-catalog__title" href="#">Cat Energy PRO 500 г</a>
                 <table class="product-catalog__table  product-table">
@@ -115,7 +185,20 @@
               </a>
             </li>
             <li class="product-catalog__item">
-              <img class="product-catalog__image" src="http://placehold.it/140x144">
+              <div class="product-catalog__item-inner">
+                <!-- <img class="product-catalog__image" src="http://placehold.it/140x144"> -->
+                <picture>
+                  <source media="(min-width: 1300px)"
+                    srcset="img/fish-big-desktop@1x.png, img/fish-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png, img/fish-big-tablet@2x.png 2x">
+                  <source srcset="img/fish-big-mobile@2x.jpg 2x">
+                  <source media="(min-width: 1300px)"
+                    srcset="img/fish-big-desktop@1x.png, img/fish-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png, img/fish-big-tablet@2x.png 2x">
+                  <img class="product-catalog__image" src="img/fish-big-mobile@1x.jpg"
+                    srcset="img/fish-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                </picture>
+              </div>
               <div class="product-catalog__desc">
                 <a class="product-catalog__title" href="#">Cat Energy PRO 1000 г</a>
                 <table class="product-catalog__table  product-table">
@@ -140,7 +223,22 @@
               </a>
             </li>
             <li class="product-catalog__item">
-              <img class="product-catalog__image" src="http://placehold.it/140x144">
+              <div class="product-catalog__item-inner">
+                <!-- <img class="product-catalog__image" src="http://placehold.it/140x144"> -->
+                <picture>
+                  <source media="(min-width: 1300px)"
+                    srcset="img/buckwheat-big-desktop@1x.png, img/buckwheat-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/buckwheat-big-tablet@1x.png, img/buckwheat-small-tablet@2x.png 2x">
+                  <source srcset="img/buckwheat-small-mobile@2x.jpg 2x">
+                  <source media="(min-width: 1300px)"
+                    srcset="img/buckwheat-small-desktop@1x.png, img/buckwheat-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/buckwheat-small-tablet@1x.png, img/buckwheat-small-tablet@2x.png 2x">
+                  <img class="product-catalog__image" src="img/buckwheat-small-mobile@1x.jpg"
+                    srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                </picture>
+              </div>
               <div class="product-catalog__desc">
                 <a class="product-catalog__title" href="#">Cat Energy PRO 500 г</a>
                 <table class="product-catalog__table  product-table">
@@ -165,7 +263,22 @@
               </a>
             </li>
             <li class="product-catalog__item">
-              <img class="product-catalog__image" src="http://placehold.it/140x144">
+              <div class="product-catalog__item-inner">
+                <picture>
+                  <source media="(min-width: 1300px)"
+                    srcset="img/buckwheat-big-desktop@1x.png, img/buckwheat-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/buckwheat-big-tablet@1x.png, img/buckwheat-big-tablet@2x.png 2x">
+                  <source srcset="img/buckwheat-big-mobile@2x.jpg 2x">
+                  <source media="(min-width: 1300px)"
+                    srcset="img/buckwheat-big-desktop@1x.png, img/buckwheat-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/buckwheat-big-tablet@1x.png, img/buckwheat-big-tablet@2x.png 2x">
+                  <img class="product-catalog__image" src="img/buckwheat-big-mobile@1x.jpg"
+                    srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                </picture>
+              </div>
+              <!-- <img class="product-catalog__image" src="http://placehold.it/140x144"> -->
               <div class="product-catalog__desc">
                 <a class="product-catalog__title" href="#">Cat Energy PRO 1000 г</a>
                 <table class="product-catalog__table  product-table">
@@ -190,7 +303,22 @@
               </a>
             </li>
             <li class="product-catalog__item">
-              <img class="product-catalog__image" src="http://placehold.it/140x144">
+              <div class="product-catalog__item-inner">
+                <picture>
+                  <source media="(min-width: 1300px)"
+                    srcset="img/rice-big-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/rice-big-tablet@1x.png, img/rice-small-tablet@2x.png 2x">
+                  <source srcset="img/rice-small-mobile@2x.jpg 2x">
+                  <source media="(min-width: 1300px)"
+                    srcset="img/rice-small-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)"
+                    srcset="img/rice-small-tablet@1x.png, img/rice-small-tablet@2x.png 2x">
+                  <img class="product-catalog__image" src="img/rice-small-mobile@1x.jpg"
+                    srcset="img/rice-small-mobile@2x.jpg 2x" alt="Cat Energy PRO 500 г">
+                </picture>
+              </div>
+              <!-- <img class="product-catalog__image" src="http://placehold.it/140x144"> -->
               <div class="product-catalog__desc">
                 <a class="product-catalog__title" href="#">Cat Energy PRO 500 г</a>
                 <table class="product-catalog__table  product-table">
@@ -216,9 +344,9 @@
             </li>
             <li class="product-catalog__item  product-catalog__item--extra">
               <div class="product-catalog__inner">
-                <img class="product-catalog__picture" src="http://placehold.it/140x144" width="140" height="144">
+                <!-- <img class="product-catalog__picture" src="http://placehold.it/140x144" width="140" height="144"> -->
                 <h2 class="product-catalog__title">Показать еще 100500 товаров</h2>
-                <p class="product-catalog__description">На самом деле вкусов гораздо больше!</p>
+                <p class="product-catalog__desc">На самом деле вкусов гораздо больше!</p>
                 <a class="product-catalog__button  button  button--show-all">
                   Показать все
                 </a>
@@ -238,10 +366,12 @@
               <h3 class="additional-products__title">
                 Сахарозаменитель
               </h3>
-              <span class="additional-products__desc">
-                1 упаковка (100 г)
-              </span>
-              <span class="additional-products__price">100 Р.</span>
+              <div class="additional-products__inner">
+                <span class="additional-products__desc">
+                  1 упаковка (100 г)
+                </span>
+                <span class="additional-products__price">100 Р.</span>
+              </div>
               <a class="additional-products__button button">
                 Заказать
               </a>
@@ -250,10 +380,12 @@
               <h3 class="additional-products__title">
                 Питьевая вода
               </h3>
-              <span class="additional-products__desc">
-                5 литров
-              </span>
-              <span class="additional-products__price">50 Р.</span>
+              <div class="additional-products__inner">
+                <span class="additional-products__desc">
+                  5 литров
+                </span>
+                <span class="additional-products__price">50 Р.</span>
+              </div>
               <a class="additional-products__button button">
                 Заказать
               </a>
@@ -262,10 +394,12 @@
               <h3 class="additional-products__title">
                 Молоко
               </h3>
-              <span class="additional-products__desc">
-                1 литр
-              </span>
-              <span class="additional-products__price">10 Р.</span>
+              <div class="additional-products__inner">
+                <span class="additional-products__desc">
+                  1 литр
+                </span>
+                <span class="additional-products__price">10 Р.</span>
+              </div>
               <a class="additional-products__button button">
                 Заказать
               </a>
@@ -274,10 +408,13 @@
               <h3 class="additional-products__title">
                 Витамины
               </h3>
-              <span class="additional-products__desc">
-                1 упаковка (30 г)
-              </span>
-              <span class="additional-product__price">300 Р.</span>
+              <div class="additional-products__inner">
+                <span class="additional-products__desc">
+                  1 упаковка (30 г)
+                </span>
+                <span class="additional-product__price">300 Р.</span>
+              </div>
+
               <a class="additional-products__button button">
                 Заказать
               </a>
@@ -291,22 +428,24 @@
       <section class="contacts">
         <div class="contacts__wrapper">
           <div class="contacts__inner">
-            <div class="contacts__address">
-              <b class="contacts__message">приглашаем к сотрудничеству дилеров!</b>
-              <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-            </div>
-            <div class="contacts__map">
-              <div class="map"></div>
-            </div>
+            <b class="contacts__message">приглашаем к сотрудничеству дилеров!</b>
+            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
           </div>
+        </div>
+        <div class="contacts__map">
+          <div class="map"></div>
+        </div>
       </section>
     </main>
 
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="logo-footer" href="#">
+        <!-- <a class="logo-footer" href="#">
           <img class="logo-footer__image" src="img/logo-footer.svg" width="128" height="24" alt="logo">
-        </a>
+        </a> -->
+        <a class="logo-page-footer" href="#">
+            <img class="logo-page-footer__image" src="img/logo-footer.svg" width="128" height="24" alt="logo">
+          </a>
         <ul class="page-footer__social  social">
           <li class="social__item">
             <a class="social__link" href="https://vk.com/htmlacademy">
@@ -331,6 +470,7 @@
       </div>
     </footer>
   </div>
+  <script src="js/menu.js"></script>
 </body>
 
 </html>
