--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,22 +12,30 @@
   <div class="page-wrapper">
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="page-header__logo">
-          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Кэт Энерджи">
-        </a>
-        <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">Открыть меню
-          </button>
+        <nav class="main-nav  main-nav--closed  main-nav--nojs">
           <div class="main-nav__wrapper">
+            <a class="main-nav__logo  logo-page-header" href="index.html">
+              <!-- <a class="main-nav__logo  logo  logo--header page-header__logo   main-nav__logo  logo  logo--header"
+              href="index.html"> -->
+              <picture>
+                <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                <img class="main-nav__logo-image  logo-page-header__image" src="img/logo-mobile.svg" width="33"
+                  height="38" alt="Кэт Энерджи">
+              </picture>
+              <!-- <img class="main-nav__logo-title  logo__title" src="img/mobile-header.svg" width="101" height="18"> -->
+            </a>
+            <button class="main-nav__toggle" type="button">Открыть меню
+            </button>
             <ul class="main-nav__list  site-list">
-              <li class="site-list__item">
-                <a class="site-list__link" href="index.html">Главная</a>
+              <li class="site-list__item main-nav__item">
+                <a class="site-list__link main-nav__link" href="index.html">Главная</a>
               </li>
-              <li class="site-list__item">
-                <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+              <li class="site-list__item main-nav__item">
+                <a class="site-list__link main-nav__link" href="catalog.html">Каталог продукции</a>
               </li>
-              <li class="site-list__item  site-list__item--active">
-                <a class="site-list__link" href="#">Подбор программы</a>
+              <li class="site-list__item  main-nav__item site-list__item--active ">
+                <a class="site-list__link main-nav__link main-nav__link--active" href="#">Подбор программы</a>
               </li>
             </ul>
           </div>
@@ -37,6 +46,10 @@
     <main class="page-main">
       <section class="cat-programm">
         <div class="cat-programm__wrapper">
+          <header class="cat-programm__header">
+            <h2 class="content-title  content-title--cat-programm">Подбор программы</h2>
+            <p class="cat-programm__slogan">Заполните анкету и мы подберем программу питания для вашего кота</p>
+          </header>
           <form class="page-form" action="https://echo.htmlacademy.ru" method="post">
             <div class="page-form__content-wrapper">
               <fieldset class="page-form__fieldset  page-form__fieldset--user-info">
@@ -63,102 +76,141 @@
               <fieldset class="page-form__fieldset  page-form__fieldset--user-task">
                 <div class="page-form__fieldset-wrapper">
                   <ul class="page-form__fieldset-list">
-                    <li class="page-form__fieldset-field field-radio">
-                      <label class="page-form__label  field-radio__label" for="lusing-weight">Похудение</label>
+                    <li class="page-form__fieldset-field  field-radio">
+                      <!-- <label class="page-form__label  field-radio__label" for="lusing-weight">Похудение</label>
                       <input class="page-form__input  field-radio__input" type="radio" name="cat-task"
-                        id="lusing-weight">
+                        id="lusing-weight"> -->
+                      <label for="losing-weight" class="field-radio__label">
+                        <input class="field-radio__input  visually-hidden" type="radio" name="cat-task"
+                          id="losing-weight" checked>
+                        <span class="field-radio__input-element"></span>
+                        <span class="field-radio__text">Похудение</span>
+                      </label>
                     </li>
                     <li class="page-form__fieldset-field  field-radio">
-                      <label class="page-form__label  field-radio__label" for="get-weight">Набор массы</label>
-                      <input class="page-form__input  field-radio__input" type="radio" name="cat-task" id="get-weight">
+                      <!-- <label class="page-form__label  field-radio__label" for="get-weight">Набор массы</label> -->
+                      <label for="get-weight" class="field-radio__label">
+                        <input class="page-form__input  field-radio__input visually-hidden" type="radio" name="cat-task"
+                          id="get-weight">
+                        <span class="field-radio__input-element"></span>
+                        <span class="field-radio__text">Набор массы</span>
+                      </label>
                     </li>
                     <li class="page-form__fieldset-field  field-radio">
-                      <label class="page-form__label  field-text__label" for="need-advice">Не знаю (Нужен ваш
-                        совет)</label>
-                      <input class="page-form__input  field-text__input" type="radio" name="cat-task" id="need-advice">
+                      <label for="need-advice" class="field-radio__label">
+                        <input class="page-form__input  field-radio__input visually-hidden" type="radio" name="cat-task"
+                          id="need-advice">
+                        <span class="field-radio__input-element"></span>
+                        <span class="field-radio__text">Не знаю (Нужен ваш совет)</span>
+                      </label>
                     </li>
                   </ul>
                 </div>
               </fieldset>
-              <fieldset class="page-form__fieldset  page-form__fieldset--contacts">
-                <h2 class="page-form__title">Контактные данные (владельца кота)</h2>
-                <div class="page-form__fieldset-wrapper">
-                  <ul class="page-form__fieldset-list">
-                    <li class="page-form__fieldset-field  field-text--email">
-                      <label class="page-form__label" for="email">E-mail</label>
-                      <input class="page-form__input" type="email" name="email" id="email"
-                        placeholder="kuklachev@gmail.com">
-                      <img class="page-form__input-icone  page-form__input-icone--email" src="http://placehold.it/20x20"
-                        width="20" height="20">
-                    </li>
-                    <li class="page-form__fieldset-field  field-text--phone-number">
-                      <label class="page-form__label" for="phone-number">Телефон</label>
-                      <input class="page-form__input" type="tel" name="phone-number" id="phone-number"
-                        placeholder="8 (960) 900-60-90">
-                      <img class="page-form__input-icone  page-form__input-icone--phone-number"
-                        src="http://placehold.it/20x20" width="20" height="20">
-                    </li>
-                  </ul>
-                </div>
-              </fieldset>
-              <fieldset class="page-form__fieldset  page-form__fieldset--comments">
-                <h2 class="page-form__title">Комментарий</h2>
-                <div class="page-form__fieldset-wrapper">
-                  <textarea class="field-text__input" name="comment" id="comment"
-                    placeholder="Расскажите обо всех повадках кота"> </textarea>
-                </div>
-              </fieldset>
-              <fieldset class="page-form__fieldset  page-form__fieldset--additional">
-                <h2 class="page-form__title">Дополнительно</h2>
-                <div class="page-form__fieldset-wrapper">
-                  <ul class="page-form__fieldset-list">
-                    <li class="page-form__fieldset-field  field-checkbox">
-                      <label class="page-form__label  field-checkbox__label" for="sugar">Сахарозаменитель</label>
-                      <input class="page-form__input  field-checkbox__input" type="checkbox" name="sugar" id="sugar"
-                        checked>
-                    </li>
-                    <li class="page-form__fieldset-field  field-checkbox">
-                      <label class="page-form__label  field-checkbox__label" for="water">Питьевая вода</label>
-                      <input class="page-form__input  field-checkbox__input" type="checkbox" name="water" id="water">
-                    </li>
-                    <li class="page-form__fieldset-field  field-checkbox">
-                      <label class="page-form__label  field-checkbox__label" for="milk">Молоко</label>
-                      <input class="page-form__input  field-checkbox__input" type="checkbox" name="milk" id="milk">
-                    </li>
-                    <li class="page-form__fieldset-field  field-checkbox">
-                      <label class="page-form__label  field-checkbox__label" for="vitamins">Витамины</label>
-                      <input class="page-form__input  field-checkbox__input" type="checkbox" name="vitamins"
-                        id="vitamins">
-                    </li>
-                  </ul>
-                </div>
-              </fieldset>
-              <div class="page-form__action  field-actions">
-                <button class="field-actions__button  button" type="submit">Отправить заявку</button>
-                <span class="field-actions__text"> * — Обязательные поля</span>
-              </div>
             </div>
+            <fieldset class="page-form__fieldset  page-form__fieldset--contacts">
+              <h2 class="page-form__title">Контактные данные (владельца кота)
+              </h2>
+              <div class="page-form__fieldset-wrapper">
+                <ul class="page-form__fieldset-list">
+                  <li class="page-form__fieldset-field  field-text--email">
+                    <label class="page-form__label  field-text__label" for="email">E-mail</label>
+                    <input class="page-form__input  field-text__input" type="email" name="email" id="email"
+                      placeholder="kuklachev@gmail.com">
+                    <img class="page-form__input-icone  page-form__input-icone--email" src="http://placehold.it/20x20"
+                      width="20" height="20">
+                  </li>
+                  <li class="page-form__fieldset-field  field-text--phone-number">
+                    <label class="page-form__label  field-text__label" for="phone-number">Телефон</label>
+                    <input class="page-form__input  field-text__input" type="tel" name="phone-number" id="phone-number"
+                      placeholder="8 (960) 900-60-90">
+                    <img class="page-form__input-icone  page-form__input-icone--phone-number"
+                      src="http://placehold.it/20x20" width="20" height="20">
+                  </li>
+                </ul>
+              </div>
+            </fieldset>
+            <fieldset class="page-form__fieldset  field-text  field-text--textarea  page-form__fieldset--comments">
+              <h2 class="page-form__title">Комментарий</h2>
+              <div class="page-form__fieldset-wrapper  field-text  field-text--textarea">
+                <textarea class="field-text__input" name="comment" id="comment"
+                  placeholder="Расскажите обо всех повадках кота"></textarea>
+              </div>
+            </fieldset>
+            <fieldset class="page-form__fieldset  page-form__fieldset--additional">
+              <h2 class="page-form__title">Дополнительно</h2>
+              <div class="page-form__fieldset-wrapper">
+                <ul class="page-form__fieldset-list">
+                  <li class="page-form__fieldset-field  field-checkbox">
+                    <label class="page-form__label  field-checkbox__label" for="sugar">
+                      <input class="page-form__input  field-checkbox__input visually-hidden" type="checkbox" name="sugar" id="sugar"
+                        checked>
+                      <span class="field-checkbox__input-element">
+                        <img src="img/icon-tick.svg" class="field-checkbox__icon">
+                      </span>
+                      <span class="field-checkbox__text">Сахарозаменитель</span>
+                    </label>
+
+                  </li>
+                  <li class="page-form__fieldset-field  field-checkbox">
+                    <label class="page-form__label  field-checkbox__label" for="water">
+                      <input class="page-form__input  field-checkbox__input  visually-hidden" type="checkbox" name="water" id="water">
+                      <span class="field-checkbox__input-element">
+                        <img src="img/icon-tick.svg" class="field-checkbox__icon">
+                      </span>
+                      <span class="field-checkbox__text">Питьевая вода</span>
+                    </label>
+                  </li>
+                  <li class="page-form__fieldset-field  field-checkbox">
+                    <label class="page-form__label  field-checkbox__label" for="milk">
+                      <input class="page-form__input  field-checkbox__input  visually-hidden" type="checkbox" name="milk" id="milk">
+                      <span class="field-checkbox__input-element">
+                        <img src="img/icon-tick.svg" class="field-checkbox__icon">
+                      </span>
+                      <span class="field-checkbox__text">Молоко</span>
+                    </label>
+                  </li>
+                  <li class="page-form__fieldset-field  field-checkbox">
+                    <label class="page-form__label  field-checkbox__label" for="vitamins">
+                      <input class="page-form__input  field-checkbox__input  visually-hidden" type="checkbox" name="vitamins"
+                        id="vitamins">
+                      <span class="field-checkbox__input-element">
+                        <img src="img/icon-tick.svg" class="field-checkbox__icon">
+                      </span>
+                      <span class="field-checkbox__text">Витамины</span>
+                    </label>
+                  </li>
+                </ul>
+              </div>
+            </fieldset>
+            <div class="page-form__action  field-actions">
+              <button class="field-actions__button  button" type="submit">Отправить заявку</button>
+              <p class="field-actions__text"> * — Обязательные поля</p>
+            </div>
+
           </form>
         </div>
       </section>
       <section class="contacts">
         <div class="contacts__wrapper">
           <div class="contacts__inner">
-            <div class="contacts__address">
-              <b class="contacts__message">приглашаем к сотрудничеству дилеров!</b>
-              <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-            </div>
-            <div class="contacts__map">
-              <div class="map"></div>
-            </div>
+            <b class="contacts__message">приглашаем к сотрудничеству дилеров!</b>
+            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
           </div>
+        </div>
+        <div class="contacts__map">
+          <div class="map"></div>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="logo-footer" href="#">
+        <!-- <a class="logo-footer" href="#">
           <img class="logo-footer__image" src="img/logo-footer.svg" width="128" height="24" alt="logo">
-        </a>
+        </a> -->
+        <a class="logo-page-footer" href="#">
+            <img class="logo-page-footer__image" src="img/logo-footer.svg" width="128" height="24" alt="logo">
+          </a>
         <ul class="page-footer__social  social">
           <li class="social__item">
             <a class="social__link" href="https://vk.com/htmlacademy">
@@ -183,6 +235,7 @@
       </div>
     </footer>
   </div>
+  <script src="js/menu.js"></script>
 </body>
 
 </html>
