--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Кэт энерджи</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,14 +12,30 @@
   <div class="page-wrapper  page-wrapper--index">
     <header class="page-header">
       <div class="page-header__wrapper">
-        <a class="page-header__logo">
-          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="33" height="38" alt="Кэт Энерджи">
-        </a>
-        <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">Открыть меню
-          </button>
+        <nav class="main-nav  main-nav--closed  main-nav--nojs  main-nav--index-page">
           <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
+            <a class="main-nav__logo  logo-page-header" href="index.html">
+              <picture>
+                <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                <img class="main-nav__logo-image  logo-page-header__image" src="img/logo-mobile.svg" width="33"
+                  height="38" alt="Кэт Энерджи">
+              </picture>
+              <!-- <img class="main-nav__logo-title  logo__title" src="img/mobile-header.svg" width="101" height="18"> -->
+            </a>
+            <button class="main-nav__toggle" type="button">Открыть меню</button>
+            <ul class="main-nav__list  site-list">
+              <li class="site-list__item  main-nav__item">
+                <a class="site-list__link  main-nav__link main-nav__link--active" href="index.html">Главная</a>
+              </li>
+              <li class="site-list__item  main-nav__item">
+                <a class="site-list__link  main-nav__link" href="catalog.html">Каталог продукции</a>
+              </li>
+              <li class="site-list__item  main-nav__item">
+                <a class="site-list__link  main-nav__link " href="form.html">Подбор программы</a>
+              </li>
+            </ul>
+            <!-- <ul class="main-nav__list site-list">
               <li class="site-list__item site-list__item--active">
                 <a class="site-list__link" href="#">Главная</a>
               </li>
@@ -28,7 +45,7 @@
               <li class="site-list__item">
                 <a class="site-list__link" href="form.html">Подбор программы</a>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </nav>
       </div>
@@ -40,10 +57,21 @@
           <h1 class="advertising__title">
             Функциональное питание для котов
           </h1>
-          <span class="advertising__slogan">
+          <p class="advertising__slogan">
             Занялся собой? Займись котом!
-          </span>
-          <img class="advertising__image" src="img/index-can-mobile@1x.png" alt="cat">
+          </p>
+          <picture>
+            <source type="image/webp" media="(min-width: 1300px)"
+              srcset="img/index-can-desktop@1x.png, img/index-can-desktop@2x.png 2x">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/index-can-tablet@1x.jpg, img/index-can-tablet@2x.jpg 2x">
+            <source type="image/webp" srcset="img/index-can-mobile@1x.png, img/index-can-mobile@2x.png 2x">
+            <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.jpg, img/index-can-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg, img/index-can-tablet@2x.jpg 2x">
+            <img class="advertising__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x"
+              alt="Вязанне корзинки: товар недели">
+          </picture>
+          <!-- <img class="advertising__image" src="img/index-can-mobile@1x.png" alt="cat"> -->
           <a class="advertising__button  button">
             Подобрать программу
           </a>
@@ -51,23 +79,35 @@
       </section>
       <section class="cases">
         <div class="cases__wrapper">
-          <ul class="cases-list">
+          <ul class="cases__list">
             <li class="cases__item">
+              <img class="case__link-icone--slim" src="img/icon-cat-slim.svg" width="35" height="49">
               <h3 class="case__title">Похудение</h3>
               <p class="case__text">
                 Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy
                 Slim
                 поможет вашему питомцу сбросить лишний вес.
               </p>
-              <a class="case__link">Каталог Slim</a>
+              <a class="case__link">Каталог Slim
+                <!-- <svg class="case__link-icone" width="24" height="11">
+                      <use xlink:href="img/icon-right-arrow-long.svg"></use>
+                    </svg> -->
+                <img class="case__link-icone" src="img/icon-right-arrow-long.svg" width="24" height="11">
+              </a>
             </li>
             <li class="cases__item">
+              <img class="case__link-icone--pro" src="img/icon-cat-pro.svg" width="35" height="49">
               <h3 class="case__title">Набор массы</h3>
               <p class="case__text">
                 Заработать авторитет среди дворовых котов и даже собак?
                 Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
               </p>
-              <a class="case__link">Каталог pro</a>
+              <a class="case__link">Каталог pro
+                <!-- <svg class="case__link-icone" width="24" height="11">
+                      <use xlink:href="img/icon-right-arrow-long.svg"></use>
+                    </svg> -->
+                <img class="case__link-icone" src="img/icon-right-arrow-long.svg" width="24" height="11">
+              </a>
             </li>
           </ul>
         </div>
@@ -75,7 +115,7 @@
       <section class="advantages">
         <div class="advantages__wrapper">
           <h2 class="advantages__title">Как это работает</h2>
-          <ul class="advantages-list">
+          <ul class="advantages__list">
             <li class="advantages__item  advantages__item--leaf">
               <p class="advantage__text">
                 Функциональное питание содержит только полезные питательные вещества.
@@ -101,47 +141,50 @@
       </section>
       <section class="story">
         <div class="story__wrapper">
-          <h2 class="story__title">
-            Живой пример
-          </h2>
-          <p class="story__text">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
-            изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-          </p>
-          <table class="story__facts-list">
-            <tbody>
-              <tr class="story__fact  story__fact--cell">
-                <td class="story__fact-name">снижение
-                  веса</td>
-                <td class="story__fact-amount">5 кг</td>
-              </tr>
-              <tr class="story__fact  story__fact--cell">
-                <td class="story__fact-name">затрачено
-                  времени</td>
-                <td class="story__fact-amount">60 дней</td>
-              </tr>
-              <tr class="story__fact  story__facts--cost">
-                <td class="story__fact-name">Затраты на питание:
-                </td>
-                <td class="story__fact-amount">15 000 руб.</td>
-              </tr>
-            </tbody>
-          </table>
-          <div class="story__slider  slider">
-            <ul class="slider__list">
-              <li class="slider__item  slider__item--before">
-                <img class="slider__picture" src="img/before-mobile@1x.png" alt="before">
-              </li>
-              <li class="slider__item  slider__item--after">
-                <img class="slider__picture" src="img/after-mobile@1x.png" alt="after">
-              </li>
-            </ul>
-            <div class="slider__controls">
-              <button class="slider__control  slider__control--before" type="button">Было</button>
-              <div class="slider__controls-bar">
-                <div class="slider__controls-toggle"></div>
+          <div class="story__inner">
+            <h2 class="story__title">
+              Живой пример
+            </h2>
+            <p class="story__text">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат
+              без
+              изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            </p>
+            <table class="story__facts-list">
+              <tbody>
+                <tr class="story__fact  story__fact--cell">
+                  <td class="story__fact-name">снижение
+                    веса</td>
+                  <td class="story__fact-amount">5 кг</td>
+                </tr>
+                <tr class="story__fact  story__fact--cell">
+                  <td class="story__fact-name">затрачено
+                    времени</td>
+                  <td class="story__fact-amount">60 дней</td>
+                </tr>
+                <tr class="story__fact  story__fact--cost">
+                  <td class="story__fact-name">Затраты на питание:
+                  </td>
+                  <td class="story__fact-amount">15 000 руб.</td>
+                </tr>
+              </tbody>
+            </table>
+            <div class="story__slider  slider">
+              <ul class="slider__list">
+                <li class="slider__item  slider__item--before">
+                  <img class="slider__picture" src="img/before-mobile@1x.png" alt="before">
+                </li>
+                <li class="slider__item  slider__item--after">
+                  <img class="slider__picture" src="img/after-mobile@1x.png" alt="after">
+                </li>
+              </ul>
+              <div class="slider__controls">
+                <button class="slider__control  slider__control--before" type="button">Было</button>
+                <div class="slider__controls-bar">
+                  <div class="slider__controls-toggle"></div>
+                </div>
+                <button class="slider__control  slider__control--after" type="button">Стало</button>
               </div>
-              <button class="slider__control  slider__control--after" type="button">Стало</button>
             </div>
           </div>
         </div>
@@ -149,20 +192,19 @@
       <section class="contacts  contacts--main-page">
         <div class="contacts__wrapper">
           <div class="contacts__inner">
-            <div class="contacts__address">
-              <b class="contacts__message">приглашаем к сотрудничеству дилеров!</b>
-              <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-            </div>
-            <div class="contacts__map">
-              <div class="map"></div>
-            </div>
+            <p class="contacts__message">приглашаем к сотрудничеству дилеров!</p>
+            <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
           </div>
+        </div>
+        <div class="contacts__map">
+          <div class="map"></div>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="logo-footer" href="#">
-          <img class="logo-footer__image" src="img/logo-footer.svg" width="128" height="24" alt="logo">
+        <a class="logo-page-footer" href="#">
+          <img class="logo-page-footer__image" src="img/logo-footer.svg" width="128" height="24" alt="logo">
         </a>
         <ul class="page-footer__social  social">
           <li class="social__item">
@@ -188,5 +230,7 @@
       </div>
     </footer>
   </div>
+  <script src="js/menu.js"></script>
 </body>
+
 </html>
